Añadida matriz de edades

--- a/stages.Rmd
+++ b/stages.Rmd
@@ -25,11 +25,11 @@ Trabajamos con poblaciones en las que los individuos presentan características 
 
 ![](stages_files/figure-markdown_github/life_cycle_stage.png)
 
-Ese esquema genérico muestra una población modelada a partir de 4 tipos de individuos, agrupados en clases de edad o estadios - las "cajas". Las flechas indican las transiciones posibles entre clases o estadios. A ese ciclo de vida le correspondería la visión numérica aportada por una matriz de transición:
+Ese esquema genérico muestra una población modelada a partir de 4 tipos de individuos, agrupados en clases de edad o estadios - las "cajas". Las flechas indican las transiciones posibles entre clases o estadios. A ese ciclo de vida le correspondería la visión numérica aportada por las matrices de transición:
 
-![](stages_files/figure-markdown_github/matrices_lefkovitch.jpg)
+![](stages_files/figure-markdown_github/structured_matrices.png)
 
-En la primera fila de las matrices de transición, ya sean de edades o de estadios, encontramos el *esquema de fecundidad*, expresada como promedio de individuos contribuidos al momento *t+1* producidos por cada individuo presente en el momento *t*. El resto de valores no nulos de la matriz representan probabilidades de supervivencia entre *t* y *t+1*, ya sea *permaneciendo* en el mismo estadio, e.g. *P~2~*, o *creciendo* al siguiente, e.g. *G~3~*.
+En la primera fila de las matrices de transición, ya sean de edades (dcha.) o de estadios (izda.), encontramos el *esquema de fecundidad*, expresada como promedio de individuos contribuidos al momento *t+1* producidos por cada individuo presente en el momento *t*. El resto de valores no nulos de la matriz representan probabilidades de supervivencia entre *t* y *t+1*, ya sea *permaneciendo* en el mismo estadio, e.g. *P~2~* en la matriz de estadios, o *creciendo* al siguiente, e.g. *G~3~* en estadios *S~2~* en edades.
  
 ### Matriz de proyección (estadios)
 Para el ejercicio usamos datos de un modelo estructurado de orcas *Orcinus orca*, contenidos en la librería `popbio` (Caswell 2001)^1^. 
