--- a/stages.Rmd
+++ b/stages.Rmd
@@ -29,9 +29,8 @@ Ese esquema genérico muestra una población modelada a partir de 4 tipos de ind
 
 ![](stages_files/figure-markdown_github/structured_matrices.png)
 
-<<<<<<< HEAD
 En la primera fila de las matrices de transición, ya sean de edades (dcha.) o de estadios (izda.), encontramos el *esquema de fecundidad*, expresada como promedio de individuos contribuidos al momento *t+1* producidos por cada individuo presente en el momento *t*. El resto de valores no nulos de la matriz representan probabilidades de supervivencia entre *t* y *t+1*, ya sea *permaneciendo* en el mismo estadio, e.g. *P~2~* en la matriz de estadios, o *creciendo* al siguiente, e.g. *G~3~* en estadios o *S~2~* en edades.
-=======
+
 En la primera fila de las matrices de transición, ya sean de edades (dcha.) o de estadios (izda.), encontramos el *esquema de fecundidad*, expresada como promedio de individuos contribuidos al momento *t+1* producidos por cada individuo presente en el momento *t*. El resto de valores no nulos de la matriz representan probabilidades de supervivencia entre *t* y *t+1*, ya sea *permaneciendo* en el mismo estadio, e.g. *P~2~* en la matriz de estadios, o *creciendo* al siguiente, e.g. *G~3~* en estadios o *S~2~* en edades.
 
 ### Matriz de proyección (estadios)
@@ -98,12 +97,10 @@ Los cálculos anteriores dependen exclusivamente de la estructura de la matriz d
 Para llevar a cabo dicha proyección necesitamos saber o simular cuántos individuos hay en cada estadio en t~0~. 
 
 El código a continuación define y almacena ese N~0~ como **n0_whale_1**, con 10 individuos en cada uno de los 4 estadios. A continuación `pop.projection()` proyecta ese N~0~ 50 intervalos de tiempo (N~50~) con los parámetros de la matriz de transición o proyección `whale`. Almacena los resultados en **whale_nt_1**:
-
 ```{r}
 n0_whale_1 <- c(10,10,10,10)
 whale_nt_1 <- pop.projection (whale, n0_whale_1, 50)
 ```
-
 `stage.vector.plot` usa los resultados de **whale_nt_1** para dibujar el cambio de las proporciones de los estadios entre t~0~ y t~50~: 
 ```{r}
 stage.vector.plot (whale_nt_1$stage.vectors, ylim = c(0, 0.6))
@@ -112,23 +109,21 @@ stage.vector.plot (whale_nt_1$stage.vectors, ylim = c(0, 0.6))
 El modelo estructurado de la población de orcas `whale` predice que las proporciones de los distintos estadios alcancen una distribución estable a partir de 10-12 años, partiendo de 10 individuos en cada estadio. ¿Cambia mucho el resultado con el vector inicial de abundancias N~0~?
 
 Para comprobarlo definimos un N~0~ muy diferente, y lo proyectamos:
-
 ```{r}
 n0_whale_2 <- c(1,2,12,25)
 whale_nt_2 <- pop.projection (whale, n0_whale_2, 50)
 stage.vector.plot (whale_nt_2$stage.vectors, ylim = c(0, 0.6))
 ```
 
-La convergencia a la distribución estable de estadios es más rápida ante la distribución de abundancias de **n0_whale_1**. Una interpretación posible es que esa distribución inicial corresponde a una población en mejor estado, dado el modelo `whale` con una tasa de crecimiento lambda = 1.025, ligeramente positiva.
+La convergencia a la distribución estable de estadios es más rápida ante la distribución de abundancias de **n0_whale_1**. Una interpretación posible es que esa distribución inicial corresponde a una población en mejor estado, dado el modelo contenido en la matriz de transición  `whale`, que tiene una tasa de crecimiento lambda = 1.025, ligeramente positiva.
 
 ### Enlaces, referencias, anotaciones de código
-(Mejor con botón drcho. + abrir en nueva pestaña)  
-
+Para abrir los enlaces en otra pestaña, *botón derecho + abrir en nueva pestaña*, o *Ctrl click*)  
 1. Caswell, H. 2001. Matrix population models: construction, analysis, and interpretation; 2nd ed. Sinauer  
 
 2. https://www.theatlantic.com/science/archive/2017/01/why-do-killer-whales-go-through-menopause/512783/  
 
-3. O no; ver el ciclo de vida de *Arisaema triphyllum* (datos en Akçakaya HR, Burgman MA, Ginzburg LR. 1999. Applied Population Ecology: Principles and Computer Exercises Using RAMAS EcoLab. Sinauer Associates.):
+3. O no; ver el ciclo de vida de *Arisaema triphyllum* (datos en Akçakaya *et al.* 1999. Applied Population Ecology: Principles and Computer Exercises Using RAMAS EcoLab. Sinauer):
 ![](stages_files/figure-markdown_github/structured_jack_in_the_pulpit_600.jpg)
 
 4. Esas posiciones las almacenamos primero por comodidad como **posit**, y las usamos después en la función. **posit** contiene dos columnas, con las posiciones XY de los estadios. Así la primera fila (0.9,0.9) corresponde en este caso a la posición de *yearling*. El resto de argumentos en la función `plotmat()` retocan aspectos estéticos, como el color de las flechas `arr.col = "green"`.
