--- a/stages.Rmd
+++ b/stages.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Modelos de poblaciones estructuradas 1 - análisis determinista"
+title: "Modelos de poblaciones estructuradas. Análisis determinista 1"
 author:
 date: "Marzo de 2019"
 output: github_document
@@ -25,16 +25,14 @@ Trabajamos con poblaciones en las que los individuos presentan características 
 
 ![](stages_files/figure-markdown_github/life_cycle_stage.png)
 
-Ese esquema genérico muestra una población modelada a partir de 4 tipos de individuos, agrupados en clases de edad o estadios - las "cajas". Las flechas indican las transiciones posibles entre clases o estadios. A ese ciclo de vida le correspondería la visión numérica aportada por las matrices de transición:
+Ese esquema genérico muestra una población modelada a partir de 4 tipos de individuos, las "cajas", agrupados en clases de edad o estadios. Las flechas indican las transiciones posibles entre clases o estadios. A ese ciclo de vida le correspondería la visión numérica aportada por las matrices de transición:
 
 ![](stages_files/figure-markdown_github/structured_matrices.png)
 
-En la primera fila de las matrices de transición, ya sean de edades (dcha.) o de estadios (izda.), encontramos el *esquema de fecundidad*, expresada como promedio de individuos contribuidos al momento *t+1* producidos por cada individuo presente en el momento *t*. El resto de valores no nulos de la matriz representan probabilidades de supervivencia entre *t* y *t+1*, ya sea *permaneciendo* en el mismo estadio, e.g. *P~2~* en la matriz de estadios, o *creciendo* al siguiente, e.g. *G~3~* en estadios o *S~2~* en edades.
-
-En la primera fila de las matrices de transición, ya sean de edades (dcha.) o de estadios (izda.), encontramos el *esquema de fecundidad*, expresada como promedio de individuos contribuidos al momento *t+1* producidos por cada individuo presente en el momento *t*. El resto de valores no nulos de la matriz representan probabilidades de supervivencia entre *t* y *t+1*, ya sea *permaneciendo* en el mismo estadio, e.g. *P~2~* en la matriz de estadios, o *creciendo* al siguiente, e.g. *G~3~* en estadios o *S~2~* en edades.
+La primera fila de las matrices de transición, ya sean de edades (dcha.) o de estadios (izda.), muestra el *esquema de fecundidad*, expresada como promedio de individuos contribuidos al momento *t+1*, producidos por cada individuo presente en el momento *t*. El resto de valores distintos de cero en la matriz representan probabilidades de supervivencia entre *t* y *t+1*, ya sea *permaneciendo* en el mismo estadio, e.g. *P~2~* en la matriz de estadios, o *creciendo* al siguiente, e.g. *G~3~* en estadios o *S~2~* en edades.
 
 ### Matriz de proyección (estadios)
-Para el ejercicio usamos datos de un modelo estructurado en estadios para una población de orcas *Orcinus orca*. Los datos están incluidos en la librería `popbio` (Caswell 2001)^1^. Al final del ejercicio^5^ incluyo instrucciones para introducir datos matriciales.
+Para el ejercicio usamos datos de un modelo estructurado en estadios de una población de orcas *Orcinus orca*. Los datos están incluidos en la librería `popbio` (Caswell 2001)^1^^,^^2^.
 
 El código a continuación carga en memoria los datos **whale**, y visualiza a continuación la matriz. la visualización incluye un pequeño truco estético: la función `pander()` rodeando al conjunto de datos devuelve una matriz con un formato más enriquecido útil especialmente para la producción de informes en pdf o html; es opcional:
 
@@ -43,13 +41,13 @@ data (whale)
 pander (whale)
 ```
 
-En el modelo la población está dividida en individuos de primer año **yearling**, juveniles no reproductores **juvenile**, individuos reproductores **mature**, y postreproductores **postreprod**. Este último estadio es muy peculiar: muy pocas especies en la naturaleza conservan aquellos individuos que han dejado de contribuir a la reproducción^2^. 
+En el modelo la población está dividida en individuos de primer año **yearling**, juveniles no reproductores **juvenile**, individuos reproductores **mature**, y postreproductores **postreprod**. Este último estadio es muy peculiar: muy pocas especies en la naturaleza conservan aquellos individuos que han dejado de contribuir a la reproducción^3^. 
 
 No es una sorpresa que **yearling** no contribuya a la reproducción, y tampoco lo será en el caso de **postreprod**, definidos precisamente por haber alcanzado la menopausia. Algo más sorprendente será la pequeña proporción de individuos a priori juveniles que sí contribuyen; es el valor contenido en la celda [1, 2]. Los valores de las filas 2, 3 y 4 representan probabilidades de supervivencia permaneciendo en el mismo estadio, e.g. `whale[2,2]`, o pasando al siguiente `whale[3,2]`. En general, las supervivencias son muy altas y la fecundidad baja, como corresponde a un predador apical.
 
 ### Diagrama de transiciones con `plotmat()`
 
-Los ciclos de vida como el genérico del esquema anterior pueden ser útiles para entender visualmente las transiciones entre clases o estadios, e incluso como paso previo antes de plantear un modelo estructurado. Seguramente sean fáciles casi siempre de pintar a mano^3^, algo menos usando software genérico.
+Los ciclos de vida como el genérico del esquema anterior pueden ser útiles para entender visualmente las transiciones entre clases o estadios, e incluso como paso previo antes de plantear un modelo estructurado. Seguramente sean fáciles casi siempre de pintar a mano^5^, algo menos usando software genérico.
 
 En **R** se pueden dibujar con `plotmat()`, a partir de una matriz de transición. 
 
@@ -64,7 +62,6 @@ plotmat(whale, pos=posit, relsize =0.75, self.shifty=0.05, box.prop = 0.2,
 ```
 
 ### Calculos básicos
-
 Una vez comprendida la estructura del modelo, extraemos la información numérica contenida en la matriz de transición; es decir, aquella dependiente solo de la combinación de valores de supervivencia y fecundidad. La función que extrae buena parte de esa información determinista del modelo es `eigen.analysis()`. Como en el caso anterior, `pander()` es una mera opción estética. Los parámetros están explicados a continuación de la salida:
 
 ```{r}
@@ -113,40 +110,12 @@ La convergencia a la distribución estable de estadios es más rápida ante la d
 Para abrir los enlaces en otra pestaña, *botón derecho + abrir en nueva pestaña*, o *Ctrl click*)  
 1. Caswell, H. 2001. Matrix population models: construction, analysis, and interpretation; 2nd ed. Sinauer  
 
-2. https://www.theatlantic.com/science/archive/2017/01/why-do-killer-whales-go-through-menopause/512783/  
+2. Este otro ejercicio corto incluye instrucciones para introducir datos matriciales: *Ctrl. + click*  https://github.com/quevedomario/eco3r/blob/master/stages2.md
 
-3. O no; ver el ciclo de vida de *Arisaema triphyllum*, Jack-in-the-pulpit https://en.wikipedia.org/wiki/Arisaema_triphyllum, a partir de los datos incluidos en Akçakaya *et al.* 1999. Applied Population Ecology: Principles and Computer Exercises Using RAMAS EcoLab. Sinauer:
-
-![](stages_files/figure-markdown_github/structured_jack_in_the_pulpit_600.jpg)
+3. https://www.theatlantic.com/science/archive/2017/01/why-do-killer-whales-go-through-menopause/512783/  
 
 4. Esas posiciones las almacenamos primero por comodidad como **posit**, y las usamos después en la función. **posit** contiene dos columnas, con las posiciones XY de los estadios. Así la primera fila (0.6,1) corresponde en el caso de las orcas a la posición de *yearling*. El resto de argumentos en la función `plotmat()` retocan aspectos estéticos, como el color de las flechas `arr.col = "green"`.  
 
-5. Los datos del modelo para las orcas estaban incluidos en la librería **popbio**. Para introducir nuestro propio modelo hay que usar sintaxis de R para matrices. A continuación un ejemplo con los datos de la herbácea *Arisaema triphyllum*:
+5. O no; ver el ciclo de vida de *Arisaema triphyllum*, Jack-in-the-pulpit https://en.wikipedia.org/wiki/Arisaema_triphyllum, a partir de los datos incluidos en Akçakaya *et al.* 1999. Applied Population Ecology: Principles and Computer Exercises Using RAMAS EcoLab. Sinauer:
 
-El primer paso es definir los estadios o clases. El formato es un simple vector de texto, construido con `c("estadios entre comillas", "separados por comas")`:
-
-```{r}
-stages_arisaema <- c("seeds",	"stage2",	"stage3",	"stage4",	"stage5",	
-                      "stage6",	"stage7")
-```
-
-A continuación introducimos los datos de la matriz de transición. El modelo tiene 7 estadios, portanto la matriz necesita 7 filas y 7 columnas. Los números los introducimos como un simple "churro", o vector numérico `c()`, en el que la matriz se lee de izquierda a derecha, y de arriba a abajo:
-
-```{r}
-arisaema <- c(
-  0.00,0.00,0.00,0.25,0.82,4.51,5.99,
-  0.30,0.58,0.30,0.06,0.06,0.10,0.06,
-  0.00,0.20,0.59,0.19,0.02,0.05,0.09,
-  0.00,0.00,0.08,0.47,0.12,0.05,0.00,
-  0.00,0.00,0.02,0.23,0.38,0.22,0.09,
-  0.00,0.00,0.00,0.05,0.40,0.34,0.43,
-  0.00,0.00,0.00,0.00,0.02,0.25,0.34
-)
-```
-
-Y finalmente construimos la matriz con la función `matrix2()` que combina estadios y transiiciones, y vemos el resultado:
-
-```{r}
-arisaema_matriz <- matrix2(arisaema, stages_arisaema)
-pander(arisaema_matriz)
-```
+![](stages_files/figure-markdown_github/structured_jack_in_the_pulpit_600.jpg)
