arreglada figura Paine

--- a/networks.rmd
+++ b/networks.rmd
@@ -12,7 +12,7 @@ El ejercicio requiere la instalación de las librerías `cheddar` y `foodweb`, y
 
 ### Los datos
 
-Los datos usados en este ejercicio están en el archivo comprimido (Ctrl. + clic) [**redes.zip**](https://github.com/quevedomario/eco3r/blob/master/redes.zip). Al descomprimirlo en la carpeta de trabajo, mostrará 4 archivos de datos separados por comas (csv), 3 de ellos dentro de una carpeta *foodweb_paine*. Corresponden a los enlaces tróficos del experimento de Paine^1^ excluyendo a la estrella de mar *Pisaster ochraceus*^2^ de charcas de marea, con el añadido simulado de 8 tipos de productores primarios.
+Los datos usados en este ejercicio están en el archivo comprimido (Ctrl + clic) [**redes.zip**](https://github.com/quevedomario/eco3r/blob/master/redes.zip). Al descomprimirlo en la carpeta de trabajo, mostrará 4 archivos de datos separados por comas (csv), 3 de ellos dentro de una carpeta *foodweb_paine*. Corresponden a los enlaces tróficos del experimento de Paine^1^ excluyendo a la estrella de mar *Pisaster ochraceus*^2^ de charcas de marea, con el añadido simulado de 8 tipos de productores primarios.
 
 ![](networks_files/figure-markdown_github/paine_starfish.png)
 
