--- a/succession.rmd
+++ b/succession.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Sucesión ecológica - modelos cuantitativos con R"
 author:
-date: "Abril 2019"
+date:
 output: github_document
 editor_options: 
   chunk_output_type: console
